@@ -37,6 +37,11 @@ blocksize = 32768
 # values may save on connection overhead and latency.
 conn_bufsize = 98304
 
+# This is used in rorpiter.CacheIndexable.  The number represents the
+# number of rpaths which may be stuck in buffers when moving over a
+# remote connection.
+pipeline_max_length = int(conn_bufsize / 150)
+
 # True if script is running as a server
 server = None
 
